--- a/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/product-details/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/product-details/style.scss
@@ -1,28 +1,15 @@
 // Extra class added for specificity so styles are applied in the editor.
 .wc-block-components-product-details.wc-block-components-product-details {
 	@include font-x-small-locked;
-	list-style: none;
 	margin: 0.5em 0;
-	padding: 0;
 
 	&:last-of-type {
 		margin-bottom: 0;
-	}
-
-	li {
-		margin-left: 0;
 	}
 }
 
 .wc-block-components-product-details__name,
 .wc-block-components-product-details__value {
-	display: inline-block;
+	display: inline;
 }
 
-@include cart-checkout-large-container {
-	.wc-block-cart__main {
-		.wc-block-components-product-details__name {
-			font-weight: bold;
-		}
-	}
-}
